# datalad-ukbiobank

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  .zenodo.json  CHANGELOG  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  requirements-devel.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test_crippledfs.yml  test_win2019.yml
code/: ukb_create_participant_ds  ukb_update_participant_ds
datalad_ukbiobank/: __init__.py  _version.py  init.py  ukb2bids.py  ukb2bids_map.py  update.py
datalad_ukbiobank/tests/: __init__.py  test_init.py  test_update.py
docs/source/: concepts.rst  conf.py  examples.rst  index.rst  introduction.rst
tools/: ukbfetch_surrogate.sh
