[metadata]
url = https://github.com/datalad/ukbiobank
author = Michael Hanke
author_email = michael.hanke@gmail.com
description = DataLad support the UKBiobank
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.5
install_requires =
    datalad >= 0.12.2
test_requires =
    nose
    coverage
packages = find:
include_package_data = True

[versioneer]
VCS = git
style = pep440
versionfile_source = datalad_ukbiobank/_version.py
versionfile_build = datalad_ukbiobank/_version.py
tag_prefix =
parentdir_prefix =

[coverage:report]
show_missing = True
omit =
    # versioneer code
    datalad_ukbiobank/_version.py
